Adicionando tags SEO

--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>
+      Ronin Automotiva | Oficina Especialistas em Honda Clássicos (70-2000)
+    </title>
     <meta charset="UTF-8" />
+
+    <meta
+      name="description"
+      content="Na Ronin Automotiva, cuidamos de Honda clássicos dos anos 70 a 2000. Especialistas em Prelude, Civic, CRX e Del Sol. Agende seu atendimento personalizado!"
+    />
+
+    <meta
+      name="keywords"
+      content="mecânica especializada Honda, manutenção Honda clássicos, Honda Prelude, Honda Civic, Honda CRX, Honda Del Sol, Ronin Automotiva, restauração de carros antigos"
+    />
     <meta
       name="google-site-verification"
       content="uKS_frgApW4Zznb8QWeHpNI9aQvJ_GuIbGcbObS4SHc"
@@ -14,7 +27,6 @@
     />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ronin Automotiva</title>
   </head>
   <body>
     <div id="root"></div>
